# book_generator

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  chapter_timings_export.csv  cloudbuild.yaml  docker-compose.yml  fix_client.py
backend/: .sessions.json  .watchfilesignore  check_blocked_content.py  check_sessions_user_id.py  check_users.py  debug_session.py  debug_user_books.py  delete_gemini_2_5_books.py  list_routes.py  openapi.json  promote_user_to_admin.py  pyproject.toml  reset_password.py  test_api_quick.py  test_bcrypt.py  test_cover_generation.py  test_cover_regeneration.py  test_cover_simple.py  test_endpoint.py  test_full_login.py  test_login.py  test_mongodb_connection.py  test_regenerate_via_endpoint.py  test_sanitize.py
backend/app/: config.py  main.py  models.py
backend/app/agent/: book_share_store.py  connection_store.py  cover_generator.py  draft_generator.py  literary_critic.py  mongo_session_store.py  notification_store.py  outline_generator.py  question_generator.py  referral_store.py  session_store.py  session_store_helpers.py  state.py  user_store.py  writer_generator.py
backend/app/analytics/: __init__.py  estimate_linear_params.py  export_chapter_timings.py
backend/app/api/: deps.py
backend/app/api/routers/: admin.py  auth.py  book.py  book_shares.py  config.py  connections.py  critique.py  draft.py  (+10 more)
backend/app/core/: config.py
backend/app/middleware/: auth.py
backend/app/services/: audit_service.py  book_generation_service.py  cost_service.py  critique_service.py  email_service.py  export_service.py  generation_service.py  library_service.py  pdf_service.py  retention_service.py  stats_service.py  storage_service.py
backend/app/static/: book_styles.css
backend/app/templates/: book_template.html
backend/app/utils/: stats_utils.py  token_tracker.py
backend/scripts/: dev.ps1  migrate_library_performance.py  migrate_sessions_to_user.py  migrate_to_gcs.py  migrate_to_mongodb.py
(+121 files in other folders)
